--- a/Wpapers/Views/Shared/_Layout.cshtml
+++ b/Wpapers/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Wallpaper" asp-action="All">Wallpapers</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Wallpaper" asp-action="Add">Upload Wallpaper</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
