--- a/Wpapers/Views/Shared/_Layout.cshtml
+++ b/Wpapers/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Wallpaper" asp-action="Add">Upload Wallpaper</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Wallpaper" asp-action="MyUploads">My Uploads</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
