--- a/Wpapers/wwwroot/css/site.css
+++ b/Wpapers/wwwroot/css/site.css
@@ -18,5 +18,17 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: rgb(232, 219, 224);
+}
+header{
+    padding: 10px;
+    
+    
+}
+.navbar {
+    box-shadow: 0 4px 4px -2px rgba(0,0,0,.2);
+    background-color: white;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
