--- a/Wpapers/Views/Wallpaper/All.cshtml
+++ b/Wpapers/Views/Wallpaper/All.cshtml
@@ -1,26 +1,40 @@
-﻿@model IEnumerable<WallpaperViewModel>
-<div class="mx-auto p-2">
-    <h2 class="text-center">All Wallpapers:</h2>
+﻿@model WallpaperQueryModel
+@{
+    <h2 style="text-align:center;padding: 10px;">All Wallpapers</h2>
+}
+<div class="row row-cols-1 row-cols-md-3 g-4">
+    @foreach (var wp in Model.Wallpapers)
+    {
+        <partial name="_WallpaperPartial" model="@wp" />
+    }
 </div>
-@if (Model.Any())
-{
-
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        @foreach (var wp in Model)
-        {
-            <div class="col">
-                <div class="card h-100">
-                    <img src="@wp.ImagePath">
-                    <div class="card-body">
-                        <h5 class="card-title">@wp.Ttitle</h5>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
-
-}
-else
-{
-    <h5>No wallpapers yet! Coming soon!</h5>
-}
+<div class="text-center">
+    <nav aria-label="Page navigation" style="align-content:center; padding: 20px;">
+        <ul class="pagination">
+            @if (Model.CurrentPage > 1)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="@Url.Action("All", new { page = Model.CurrentPage - 1 })" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                </li>
+            }
+            @for (int i = 1; i <= Model.Pages; i++)
+            {
+                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                    <a class="page-link" href="@Url.Action("All", new { page = i })">@i</a>
+                </li>
+            }
+            @if (Model.CurrentPage < Model.Pages)
+            {
+                <li class="page-item">
+                    <a class="page-link" href="@Url.Action("All", new { page = Model.CurrentPage + 1})" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </li>
+            }
+        </ul>
+    </nav>
+</div>
