--- a/Wpapers/Views/Shared/_LoginPartial.cshtml
+++ b/Wpapers/Views/Shared/_LoginPartial.cshtml
@@ -5,17 +5,26 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Wallpaper" asp-action="MyUploads">My Uploads</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
-        </li>
-        <li class="nav-item">
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
+        <div class="dropdown">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
+            style="background-color:rgb(232, 219, 224); border: 0px solid;" aria-expanded="false">
+                Hello @User.Identity.Name
+            </button>
+            <ul class="dropdown-menu">
+                <li >
+                    <a class="dropdown-item" text-dark" asp-area="" asp-controller="Wallpaper" asp-action="MyUploads">My Uploads</a>
+                </li>
+                <li >
+                    <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account Settings</a>
+                </li>
+                <li >
+                    <form class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+      
     }
     else
     {
