--- a/Wpapers/Views/Wallpaper/All.cshtml
+++ b/Wpapers/Views/Wallpaper/All.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WallpaperQueryModel
 @{
-    <h2 style="text-align:center;padding: 10px;">All Wallpapers</h2>
+    <h2 style="text-align:center;padding: 10px; color: white;">All Wallpapers</h2>
 }
 <div class="row row-cols-1 row-cols-md-3 g-4">
     @foreach (var wp in Model.Wallpapers)
