Changed IdentityUser to ApplicationUser to use the properties given by AppUser

--- a/Wpapers/Views/Shared/_WallpaperPartial.cshtml
+++ b/Wpapers/Views/Shared/_WallpaperPartial.cshtml
@@ -7,6 +7,7 @@
         <img src="@Model.ImagePath">
         <div class="card-body">
             <h5 class="card-title">@Model.Ttitle</h5>
+            <h4>By: @Model.UploaderName</h4>
         </div>
     </div>
 </div>
