--- a/Wpapers/Views/Shared/_LoginPartial.cshtml
+++ b/Wpapers/Views/Shared/_LoginPartial.cshtml
@@ -6,10 +6,10 @@
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
-        <div class="dropdown">
-            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
+        <div class="dropdown dropstart">
+            <button type="button" data-bs-toggle="dropdown"
             style="background-color:rgb(232, 219, 224); border: 0px solid;" aria-expanded="false">
-                Hello @UserManager.GetUserName(User)
+                <i class="fa-solid fa-bars"></i> Menu
             </button>
             <ul class="dropdown-menu">
                 <li >
