--- a/Wpapers/Views/Wallpaper/MyUploads.cshtml
+++ b/Wpapers/Views/Wallpaper/MyUploads.cshtml
@@ -5,7 +5,7 @@
 @if (Model.Any())
 {
 <div class="mx-auto p-2">
-    <h2 class="text-center">My Wallpapers:</h2>
+    <h2 class="text-center" style="color: white">My Wallpapers:</h2>
 </div>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
