--- a/Wpapers/Views/Shared/_LoginPartial.cshtml
+++ b/Wpapers/Views/Shared/_LoginPartial.cshtml
@@ -19,9 +19,7 @@
                     <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Account Settings</a>
                 </li>
                 <li >
-                    <form class="dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                        <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-                    </form>
+                    <a class="dropdown-item" asp-area="" asp-controller="User" asp-action="Logout">Logout</a>
                 </li>
             </ul>
         </div>
@@ -30,10 +28,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="login">Login</a>
         </li>
     }
 </ul>
