--- a/Wpapers/Views/_ViewImports.cshtml
+++ b/Wpapers/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Wpapers
 @using Wpapers.Models
 @using Wpapers.ViewModels.Wallpaper
+@using Wpapers.ViewModels.User
+@using Wpapers.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
