--- a/Wpapers/Views/Shared/_WallpaperPartial.cshtml
+++ b/Wpapers/Views/Shared/_WallpaperPartial.cshtml
@@ -12,13 +12,16 @@
     </div>
 </div> *@
 
-<div class="img-box">
-	<img src="@Model.ImagePath" title="Details">
-	<div class="transparent-box">
-		<div class="caption">
-			<p>@Model.Ttitle</p>
-            <h4>By: @Model.UploaderName</h4>
-		</div>
-	</div>
-</div>
+<a asp-controller="Wallpaper" asp-action="Details" asp-route-id="@Model.Id">
+    <div class="img-box">
+        <img src="@Model.ImagePath" title="Details">
+        <div class="transparent-box">
+            <div class="caption">
+                <p>@Model.Ttitle</p>
+                <h4>By: @Model.UploaderName</h4>
+            </div>
+        </div>
+    </div>
+</a>
+
 
