--- a/Wpapers/wwwroot/css/site.css
+++ b/Wpapers/wwwroot/css/site.css
@@ -93,4 +93,23 @@ header {
     transition: background-color 0.3s ease;
 }
 
-
+#wallpaperDetails {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 10px rgba(0,0,0,0.30);
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    border: solid 2px white;
+ 
+}
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 15px;
+}
