--- a/Wpapers/Views/Wallpaper/Details.cshtml
+++ b/Wpapers/Views/Wallpaper/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WallpaperViewModel
+﻿@* @model WallpaperViewModel
 
 <div>
     <h2 class="text-center" style="color: white">By @Model.UploaderName: @Model.Ttitle</h2>
@@ -10,4 +10,4 @@
         <button class="btn">Download Wallpaper</button>
     </a>
     <img class="d-block w-100" id="wallpaperDetails" src="@Model.ImagePath">
-</div>
+</div> *@
