--- a/Wpapers/wwwroot/css/site.css
+++ b/Wpapers/wwwroot/css/site.css
@@ -18,10 +18,27 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
-    /*background-color: rgb(232, 219, 224);*/
-    background-color: black;
+    margin: 0px;
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 65px;
 }
+
+    body::before {
+        background-image: linear-gradient(rgba(0,0,0,0.55),rgba(0,0,0,0.55)), url('../images/background/pexels-pixabay-531880.jpg');
+        ;
+        background-size: cover;
+        content: ' ';
+        height: 100%;
+        left: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        will-change: transform;
+        z-index: -1;
+    }
 
 header {
     padding: 10px;
@@ -60,6 +77,7 @@ header {
     color: white;
     position: relative;
     background-color: white;
+    cursor:pointer;
 }
 .img-box:hover img {
     transform: scale(1.1);
@@ -94,16 +112,12 @@ header {
 }
 
 #wallpaperDetails {
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    border-radius: 20px;
-    box-shadow: 0 0 10px 10px rgba(0,0,0,0.30);
-    margin: auto;
-    margin-top: 20px;
-    margin-bottom: 50px;
-    border: solid 2px white;
- 
+    justify-content: center; 
+    margin: auto;  
 }
 .btn {
     background-color: DodgerBlue;
@@ -112,4 +126,19 @@ header {
     padding: 12px 30px;
     cursor: pointer;
     font-size: 15px;
+}
+/*---Modal---*/
+.modal-dialog {
+    max-width: 800px;
+}
+.modal-content {
+    background-color: transparent;
+    border: unset;
+}
+.modal-header {
+    border-bottom: unset;
+}
+.modal-footer {
+    display:contents;
+    border-top: unset;
 }
