--- a/Wpapers/Views/Wallpaper/MyUploads.cshtml
+++ b/Wpapers/Views/Wallpaper/MyUploads.cshtml
@@ -27,7 +27,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Are you sure you want to delete image: @wp.Ttitle</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel" style="color: white">Are you sure you want to delete image: @wp.Ttitle</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-footer">
