--- a/Wpapers/Views/Shared/_WallpaperPartial.cshtml
+++ b/Wpapers/Views/Shared/_WallpaperPartial.cshtml
@@ -27,25 +27,23 @@
 <div class="modal fade" id="wallpaperModal-@Model.Id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">   
-                <h2 class="text-center" style="color: white">By @Model.UploaderName: @Model.Ttitle</h2>
+            <div class="modal-header">                  
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <img class="d-block w-100" id="wallpaperDetails" src="@Model.ImagePath">
             </div>
             <div class="modal-footer">
-                <a href="@Model.ImagePath" download="@Model.Ttitle">
-                    <button class="btn">Download Wallpaper</button>
-                </a>
-                <h2 style="color: white">
-                    View more wallpapers by this user
-                    <a class="" text-dark" asp-area="" asp-controller="User" asp-action="Profile" asp-route-id="@Model.Id">here</a>
-                </h2>
-                <h3 style="color: white">
+                <h3 style="color: white;">
                     Likes: @Model.Likes.ToString()
-                    <a class="" text-dark" asp-area="" asp-controller="Wallpaper" asp-action="Like" asp-route-id="@Model.Id"><i class="fa-regular fa-heart" style="color: #d01f0b;"></i></a>
+                    <a class="" text-dark" asp-area="" asp-controller="Wallpaper" asp-action="Like" asp-route-id="@Model.Id"><i class="fa-regular fa-heart" style="color: #d01f0b;"></i></a> 
+                    View more wallpapers by @Model.UploaderName
+                    <a class="" text-dark" asp-area="" asp-controller="User" asp-action="Profile" asp-route-id="@Model.Id">here</a>
                 </h3>
+                <a href="@Model.ImagePath" download="@Model.Ttitle">
+                    <button class="button">Download Wallpaper</button>
+                </a>
+                
             </div>
         </div>
     </div>
