Added wallpaper day of upload property

--- a/Wpapers/Views/Shared/_WallpaperPartial.cshtml
+++ b/Wpapers/Views/Shared/_WallpaperPartial.cshtml
@@ -43,7 +43,7 @@
                 <a href="@Model.ImagePath" download="@Model.Ttitle">
                     <button class="button">Download Wallpaper</button>
                 </a>
-                
+                <h5 style="color: white">Uploaded on @Model.UploadedOn.Date.ToString("dd/MM/yyyy")</h5>
             </div>
         </div>
     </div>
