--- a/Wpapers/Views/Wallpaper/All.cshtml
+++ b/Wpapers/Views/Wallpaper/All.cshtml
@@ -9,6 +9,19 @@
         <button id="serachButton" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
 </form>
+<div>
+    <button class="" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Sort By: @Model.SortBy
+    </button>
+    <ul class="dropdown-menu">
+        <li>
+            <a class="dropdown-item" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@(Model.CurrentPage)&sortBy=@("Newest")">Newest</a>
+        </li>
+        <li>
+            <a class="dropdown-item" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@(Model.CurrentPage)&sortBy=@("Oldest")">Oldest</a>
+        </li>
+    </ul>
+</div>
 
 <div class="col">
     <div class="wallpapers">
@@ -22,7 +35,7 @@
     <nav aria-label="Page navigation" style="justify-content:center; padding: 20px; display:flex">
         <ul class="pagination">
             <li class="page-item @(Model.CurrentPage > 1 ? "" : "disabled")">
-                <a class="page-link" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@(Model.CurrentPage - 1)" aria-label="Previous">
+                <a class="page-link" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@(Model.CurrentPage - 1)&sortBy=@(Model.SortBy)" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span>Previous</span>
                 </a>
@@ -31,12 +44,12 @@
             @for (int i = 1; i <= Model.Pages; i++)
             {
                 <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                    <a class="page-link" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@i">@i</a>
+                    <a class="page-link" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@i&sortBy=@(Model.SortBy)">@i</a>
                 </li>
             }
 
             <li class="page-item @(Model.CurrentPage < Model.Pages ? "" : "disabled")">
-                <a class="page-link" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@(Model.CurrentPage + 1)" aria-label="Next">
+                <a class="page-link" href="/Wallpaper/All?searchString=@(Model.SearchString)&page=@(Model.CurrentPage + 1)&sortBy=@(Model.SortBy)" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span>Next</span>
                 </a>
